--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>DOM</title>
 </head>
 <body>
+
+    <a href="">This is my anchor tag</a>
+    <a href="">This is another anchor tag</a>
+
+    <p id="para-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, temporibus architecto fugit assumenda voluptate quasi quae eum dolore asperiores voluptatum necessitatibus quisquam iure, voluptatibus mollitia, sed aspernatur quaerat in possimus.</p>
+
+    <button class="button">I'm a button</button>
     
 
     <script src="js/script.js"></script>
