played with more data types and possible output to the console

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <button class="button">I'm a button</button>
     
 
-    <script src="js/script.js"></script>
+    <script src="js/review-data-types.js"></script>
 </body>
 </html>
