added a paragraph in html and changed the text using the dom

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <button class="button">I'm a button</button>
     
 
-    <script src="js/script.js"></script>
+    <p id="para-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, sit?</p>
+
+    <script src="js/review-manipulation-1.js"></script>
 </body>
 </html>
