--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
     <p id="para-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, sit?</p>
 
-    <script src="js/review-manipulation-1.js"></script>
+    <p id="para-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium magni est cupiditate error sequi minima voluptas fugiat et odit sed.</p>
+
+    <div class="content"></div>
+
+    <script src="js/review-manipulation-3.js"></script>
 </body>
 </html>
