added another content div and changed all content to display inline-block in the dom

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <p id="para-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium magni est cupiditate error sequi minima voluptas fugiat et odit sed.</p>
 
     <div class="content"></div>
+    <div class="content"></div>
 
-    <script src="js/review-manipulation-3.js"></script>
+    <script src="js/review-manipulation-4.js"></script>
 </body>
 </html>
