added event listeners

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
     <p id="para-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, temporibus architecto fugit assumenda voluptate quasi quae eum dolore asperiores voluptatum necessitatibus quisquam iure, voluptatibus mollitia, sed aspernatur quaerat in possimus.</p>
 
-    <button class="button">I'm a button</button>
+    <!-- <button class="button" onclick="console.log('button was clicked')">Submit</button> -->
+    
+    <button class="button">Submit</button>
+    <button class="button-cancel">Cancel</button>
     
 
     <p id="para-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, sit?</p>
@@ -24,6 +27,6 @@
     <div class="content"></div>
     <div class="content"></div>
 
-    <script src="js/review-manipulation-4.js"></script>
+    <script src="js/dom-event-listener.js"></script>
 </body>
 </html>
