--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <div class="content"></div>
     <div class="content"></div>
 
-    <script src="js/dom-event-listener.js"></script>
+    <script src="js/conditions.js"></script>
 </body>
 </html>
