added in some loops like a for loop and a do while loop

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <div class="content"></div>
     <div class="content"></div>
 
-    <script src="js/review-manipulation-4.js"></script>
+    <script src="js/loops.js"></script>
 </body>
 </html>
